# fsiggor.github.io

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  README.md  compose.yaml  docusaurus.config.js  hugo.toml  index.html  package-lock.json  package.json  sidebars.js  sitemap.xml
.github/: dependabot.yml
.github/workflows/: codeql.yml  deploy.yml
assets/js/: 01a85c17.90a58ab9.js  02b1c3ca.88bb1a87.js  042a6c61.5ecbf074.js  0480b142.94e5c049.js  0e384e19.1087167c.js  0e384e19.25f12ab1.js  0e384e19.8f74dac8.js  0e384e19.962df8be.js  0e384e19.c6b80081.js  14eb3368.8e028cb6.js  14eb3368.b8dffe47.js  160f7bb3.74989a14.js  160f7bb3.ad5ea0b9.js  17896441.b825b1c3.js  18c41134.12ea7622.js  1be78505.550d082d.js  1be78505.6df24ebe.js  1be78505.c2a8da70.js  (+118 more)
blog/: Dockerfile  README.md  atom.xml  authors.yml  go.mod  hugo.toml  index.html  rss.xml
content/: _index.md
crawler/: Dockerfile  README.md  pyproject.toml  scrapy.cfg  sources.json
crawler/src/: config.py  items.py  linker.py  pipelines.py  settings.py
crawler/src/spiders/: feeds_spider.py  site_spider.py
crawler/tests/: test_config.py  test_feeds_spider.py  test_linker.py  test_pipelines.py  test_spider.py
docs/: ARCHITECTURE.md  CONTRIBUTING.md  GUIDELINES.md  Logging.md  PUBLISHING.md  SECURITY.md  SOURCES.md  faq.md
embeddings/: .env.example  README.md  pyproject.toml
embeddings/src/: ingest.py  query.py
embeddings/tests/: test_ingest.py  test_query.py
layouts/: index.html
markdown-page/: index.html
public/: en.search-data.json  index.html  index.xml  sitemap.xml
(+104 files in other folders)
