[project]
name = "crawler"
version = "0.1.0"
description = "Scrapy crawler that saves pages as Hugo-compatible markdown"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "feedparser>=6.0.11",
    "pyyaml>=6.0.3",
    "scrapy>=2.15.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
