[project]
name = "embeddings"
version = "0.1.0"
description = "Semantic embeddings for document linking and search"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-chroma>=0.2",
    "langchain-openai>=0.3",
    "python-dotenv>=1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
